--- a/index.html
+++ b/index.html
@@ -3,93 +3,92 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AFEEC - Modern Streetwear</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <title>AFEEC - Streetwear Fashion</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Navigation -->
+    <!-- Navigation Bar -->
     <nav>
         <img src="images/logoafeec.png" alt="AFEEC Logo" class="logo-img">
         <div class="nav-links">
             <a href="#home">Home</a>
             <a href="#blog">Blog</a>
-            <a href="shop.html">Shop</a>
+            <a href="#shop">Shop</a>
             <a href="#about">About</a>
             <a href="#contact">Contact</a>
         </div>
         <div class="icons">
+            <label for="search-toggle">
+                <i class="fas fa-search"></i>
+            </label>
             <input type="checkbox" id="search-toggle">
-            <label for="search-toggle"><i class="fa-solid fa-magnifying-glass"></i></label>
             <div class="search-box">
-                <input type="text" placeholder="Search...">
+                <input type="text" placeholder="Search products...">
             </div>
-            <a href="#login"><i class="fa-solid fa-user"></i></a>
-            <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
+            <a href="#login-modal"><i class="fas fa-user"></i></a>
+            <i class="fas fa-shopping-cart"></i>
         </div>
     </nav>
 
-    <!-- Login Modal -->
-    <div class="login-modal" id="login">
-        <div class="login-box">
-            <img src="images/logoafeec.png" class="logo" alt="Logo">
-            <h2>Login</h2>
-            <form>
-                <input type="text" placeholder="Username" required>
-                <input type="password" placeholder="Password" required>
-                <button type="submit" class="btn">Login</button>
-            </form>
-            <div class="links">
-                <a href="#">Forgot Password?</a>
-                <a href="#">Sign Up</a>
-            </div>
-            <a href="#" class="close-btn">Close</a>
-        </div>
-    </div>
-
     <!-- Hero Section -->
     <section class="content-section">
+        <!-- Left side: Text content -->
         <div class="text-content">
-            <img src="images/logoafeec.png" class="hero-logo" alt="AFEEC">
+            <img src="images/logoafeec.png" alt="AFEEC" class="hero-logo">
             <p>New Outfit for this Year</p>
-            <h1><span style="color: gray;">FRESH LOOK,</span> FRESH DEALS</h1>
+            <h1><span style="color: #999;">FRESH LOOK,</span> FRESH DEALS</h1>
             <h4>Your Wardrobe's Glow-up Starts here - Up to 70% Off</h4>
             <button class="shop-btn">SHOP NOW</button>
         </div>
-        <img src="images/featuredproduct.png" class="right-img" alt="Models">
+        
+        <!-- Right side: Featured image -->
+        <img src="images/featuredproduct.png" alt="AFEEC Models" class="right-img">
     </section>
 
     <!-- New Release Section -->
     <h2 class="title">New Release</h2>
-    <section class="product-grid">
+    <div class="product-grid">
+        <!-- Product Card 1 -->
         <div class="product-card">
-            <img src="images/skatersoul.png" alt="Product 1">
-            <h3>New Outfit for this Year</h3>
-            <p class="price">₱699.00</p>
-        </div>
-        <div class="product-card">
-            <img src="images/chaosclowntee.png" alt="Product 2">
-            <h3>New Outfit for this Year</h3>
+            <img src="images/skatersould.png" alt="Skater Soul Graphic Tee">
+            <h3>Skater Soul Graphic Tee</h3>
+            <h5>Black cotton t-shirt with a large graphic print showing a skull and skateboard. Standard fit with short sleeves.</h5>
             <p class="price">₱599.00</p>
         </div>
+
+        <!-- Product Card 2 -->
         <div class="product-card">
-            <img src="images/ashfadebite.jpg" alt="Product 3">
-            <h3>New Outfit for this Year</h3>
+            <img src="images/chaosclowntee.png" alt="Chaos Clown Tee">
+            <h3>Chaos Clown Tee</h3>
+            <h5>Black cotton t-shirt featuring a red and white graphic of a clown face. Relaxed fit, short sleeves.</h5>
             <p class="price">₱599.00</p>
         </div>
+
+        <!-- Product Card 3 -->
         <div class="product-card">
-            <img src="images/skatercrewcrop.png" alt="Product 4">
-            <h3>New Outfit for this Year</h3>
+            <img src="images/ashfadebite.jpg" alt="AshModo Bite Tee">
+            <h3>AshModo Bite Tee</h3>
+            <h5>Beige cotton t-shirt with a blank print showing an open mouth and teeth. Standard fit with short sleeves.</h5>
+            <p class="price">₱599.00</p>
+        </div>
+
+        <!-- Product Card 4 -->
+        <div class="product-card">
+            <img src="images/skatervewcrop.png" alt="Skater Crew Crop Tee">
+            <h3>Skater Crew Crop Tee</h3>
+            <h5>Black cropped t-shirt with a white graphic print of a figure. Relaxed fit with short sleeves.</h5>
             <p class="price">₱499.00</p>
         </div>
-    </section>
+    </div>
 
     <!-- About Section -->
     <section class="about-section">
-        <h2>Welcome to <strong>AFEEC</strong></h2>
-        <p>— your go-to destination for modern streetwear and stylish apparel.</p>
-        <p>We believe fashion should be comfortable, expressive, and accessible for everyone. Every collection we design is made to bring confidence and creativity to your everyday look.</p>
+        <h2>About Us</h2>
+        <p>Welcome to <strong>AFEEC</strong> – your go-to destination for modern streetwear and stylish apparel. We believe fashion should be comfortable, expressive, and accessible for everyone. Every collection we design is made to bring confidence and creativity to your everyday look.</p>
         <p>From trendy tops to timeless accessories, <strong>AFEEC</strong> represents individuality, passion, and the love for bold fashion. Be part of our growing community and wear your story with pride.</p>
         <div class="button-container">
             <button class="cta-about">Learn More</button>
@@ -97,30 +96,76 @@
     </section>
 
     <!-- Categories Section -->
-    <section class="categories">
+    <h2 class="title">Why Choose Us</h2>
+    <div class="categories">
         <div class="category-box">
-            <i class="fa-solid fa-shirt"></i>
+            <i class="fas fa-tshirt"></i>
             <h3>Very Soft Fabric</h3>
-            <p>Made with smooth and comfy material that feels gentle on your skin.</p>
+            <p>Made with smooth and comfy material that feels great on your skin.</p>
         </div>
         <div class="category-box">
-            <i class="fa-solid fa-scissors"></i>
+            <i class="fas fa-cut"></i>
             <h3>Durable Quality</h3>
-            <p>Designed to last, Does not get dirty easily even after repeated use.</p>
+            <p>Designed to last. Does not get dirty easily even after repeated use.</p>
         </div>
         <div class="category-box">
-            <i class="fa-solid fa-droplet"></i>
+            <i class="fas fa-wind"></i>
             <h3>Skin-Friendly</h3>
             <p>Safe and gentle for all skin types, perfect for everyday wear.</p>
         </div>
         <div class="category-box">
-            <i class="fa-solid fa-heart"></i>
+            <i class="fas fa-heart"></i>
             <h3>Made with Care</h3>
             <p>Each piece is crafted with love and attention to detail for your comfort.</p>
         </div>
+    </div>
+
+    <!-- Newsletter Signup Section -->
+    <section class="newsletter-section">
+        <div class="newsletter-container">
+            <h3>Stay Updated</h3>
+            <form class="newsletter-form">
+                <input type="email" placeholder="Enter your email for newsletter" required>
+                <button type="submit">Subscribe</button>
+            </form>
+        </div>
     </section>
 
-    <!-- FOOTER -->
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="social-media-bar">
+            <a href="https://www.facebook.com/AprilBarbieBatara" target="_blank" aria-label="Facebook" title="Facebook">
+                <i class="fab fa-facebook-f"></i>
+            </a>
+            <a href="https://www.instagram.com/veebtr" target="_blank" aria-label="Instagram" title="Instagram">
+                <i class="fab fa-instagram"></i>
+            </a>
+            <a href="https://www.tiktok.com/@whosvee" target="_blank" aria-label="TikTok" title="TikTok">
+                <i class="fab fa-tiktok"></i>
+            </a>
+        </div>
+        
+        <div class="copyright-bar">
+            <p>&copy; 2025 GROUP 6 AFEEC BSIT - IT11S5</p>
+        </div>
+    </footer>
+
+    <!-- Login Modal (Moved after footer for proper z-index layering) -->
+    <div id="login-modal" class="login-modal">
+        <div class="login-box">
+            <img src="images/logoafeec.png" alt="AFEEC Logo" class="logo">
+            <h2>Login</h2>
+            <input type="text" placeholder="Username or Email">
+            <input type="password" placeholder="Password">
+            <button class="btn">Login</button>
+            <div class="links">
+                <a href="#">Forgot Password?</a>
+                <a href="#">Create Account</a>
+            </div>
+            <a href="#" class="close-btn">Close</a>
+        </div>
+    </div>
+        <!-- FOOTER - EXACT REFERENCE MATCH -->
     <footer class="site-footer">
         <div class="footer-main">
             <!-- Column 1: Newsletter -->
@@ -137,8 +182,9 @@
             <div class="footer-col footer-info-col">
                 <div class="info-section">
                     <h3>Schedule</h3>
-                    <p><strong>Monday - Friday</strong></p>
-                    <p>8:00 AM - 5:00 PM</p>
+                    <p><strong>Monday - Sunday</strong></p>
+                    <p><strong>Bar:</strong> 9am - 11pm</p>
+                    <p><strong>Kitchen:</strong> 9am - 7pm</p>
                 </div>
                 <div class="info-section">
                     <h3>Address</h3>
@@ -153,7 +199,7 @@
                     <h3>Follow us</h3>
                     <a href="https://facebook.com" target="_blank">Facebook</a>
                     <a href="https://instagram.com" target="_blank">Instagram</a>
-                    <a href="https://tiktok.com" target="_blank">TikTok</a>
+                    <a href="https://tiktok.com" target="_blank">Tripadvisor</a>
                 </div>
                 <div class="info-section">
                     <h3>Contact</h3>
@@ -167,6 +213,7 @@
             <p>&copy; 2025 AFEEC. All rights reserved.</p>
         </div>
     </footer>
+
 
     <script src="script.js"></script>
 </body>
